gccida/c1/simplify_unary_operation
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:873:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:873:47: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                              ^
                                              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:873:74: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_unary_operation( rtx_code code, machine_mode mode, rtx op, machine_mode op_mode) 
                                                                         ^
                                                                         enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:885:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v18; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:887:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v20; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:914:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( signed __int64)v8[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:932:26: error: passing 'unsigned int' to parameter of incompatible type 'realvaluetype'
real_value_truncate( i1, ( unsigned int)mode); 
                         ^~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/real.h:407:24: note: passing argument to parameter here
                                                  REAL_VALUE_TYPE));
                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:945:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int64)v8[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:1030:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:1039:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v14 >> 14) & 0x3FC)) == MODE_FLOAT 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:1039:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v14 >> 14) & 0x3FC)) == MODE_FLOAT 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:1091:9: error: use of undeclared identifier 'rtx_def'
v17 = ( rtx_def)v8->fld[0].rtwint; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:1133:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
data.r[0] = ( __int64)v17; 
                      ^~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/simplify-rtx.c:1138:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( v17 ) 
^    ~~~
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_unary_operation/src/obj/simplify-rtx.o] Error 1
